--- a/index.html
+++ b/index.html
@@ -7,10 +7,162 @@
 		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="css/common.css" />
 		<link rel="stylesheet" href="css/responsive.css" />
+		<link rel="stylesheet" href="css/board.css" />
+		<link rel="stylesheet" href="css/modal.css" />
 	</head>
 	<body>
 		<main class="container">
-			<!-- 코드작성 -->
+			<button type="button" id="openModalBtn">+ Add Todo</button>
+			<!-- 모달창 -->
+			<div class="modal-wrap">
+				<section class="modal">
+					<header class="modal-header">
+						<h2 class="modal-title" id="modalTitle">To-do</h2>
+						<button class="modal-close" id="closeModal" type="button">×</button>
+					</header>
+
+					<form class="modal-body" id="todoForm">
+						<div class="modal-form">
+							<label class="label" for="title"
+								>제목 <span class="req">*</span></label
+							>
+							<input
+								class="input"
+								id="title"
+								name="title"
+								type="text"
+								placeholder="제목을 입력하세요"
+								required
+							/>
+						</div>
+
+						<div class="modal-form">
+							<label class="label" for="content">내용</label>
+							<textarea
+								class="textarea"
+								id="content"
+								name="content"
+								rows="4"
+								placeholder="상세 내용을 입력하세요..."
+							></textarea>
+						</div>
+
+						<div class="modal-status">
+							<div class="modal-form">
+								<p class="label">우선순위</p>
+								<div class="prioritys">
+									<input
+										class="priority-radio"
+										type="radio"
+										name="priority"
+										id="high"
+										value="높음"
+									/>
+									<label class="priority" for="high">높음</label>
+
+									<input
+										class="priority-radio"
+										type="radio"
+										name="priority"
+										id="mid"
+										value="중간"
+										checked
+									/>
+									<label class="priority" for="mid">중간</label>
+
+									<input
+										class="priority-radio"
+										type="radio"
+										name="priority"
+										id="low"
+										value="낮음"
+									/>
+									<label class="priority" for="low">낮음</label>
+								</div>
+							</div>
+
+							<div class="modal-form">
+								<label class="label" for="status">상태</label>
+								<select class="select" id="status" name="status">
+									<option value="todo" selected>할일</option>
+									<option value="doing">진행중</option>
+									<option value="done">완료</option>
+								</select>
+							</div>
+						</div>
+
+						<footer class="modal-footer">
+							<button class="btn-text" id="cancelBtn" type="button">
+								취소
+							</button>
+							<button class="btn-primary" type="submit">저장하기</button>
+						</footer>
+					</form>
+				</section>
+			</div>
+
+			<div class="board-wrap">
+				<section class="board">
+					<!-- 할일 -->
+					<article class="box todo-card">
+						<header class="card-head">
+							<div class="card-title">
+								<span>할일</span>
+								<span class="count">1</span>
+							</div>
+							<button class="del-all" type="button">전체 삭제</button>
+						</header>
+
+						<div class="task">
+							<div class="task-top">
+								<span class="badge">높음</span>
+								<button class="close" type="button">×</button>
+							</div>
+							<p class="task-title">프로젝트 팀플 과제</p>
+							<p class="task-desc">순조롭게 진행되고 있음.</p>
+							<div class="task-date">
+								<p>등록일 2026.01.23 17:00</p>
+								<p>수정일 2026.01.23 17:00</p>
+							</div>
+						</div>
+					</article>
+
+					<!-- 진행 중 -->
+					<article class="box progress-card">
+						<header class="card-head">
+							<div class="card-title">
+								<span>진행중</span>
+								<span class="count">0</span>
+							</div>
+							<button class="del-all" type="button">전체 삭제</button>
+						</header>
+
+						<div class="empty">
+							<div>
+								<p>진행 중인 일이 없습니다.</p>
+							</div>
+						</div>
+					</article>
+
+					<!-- 완료 -->
+					<article class="box done-card">
+						<header class="card-head">
+							<div class="card-title">
+								<span>완료</span>
+								<span class="count">0</span>
+							</div>
+							<button class="del-all" type="button">전체 삭제</button>
+						</header>
+
+						<div class="empty">
+							<div>
+								<p>완료된 일이 없습니다.</p>
+							</div>
+						</div>
+					</article>
+				</section>
+			</div>
 		</main>
+		<script src="js/todos.js"></script>
 	</body>
 </html>
