--- a/index.html
+++ b/index.html
@@ -296,7 +296,8 @@
 					</section>
 				</div>
 			</main>
-			<script src="js/todos.js"></script>
+			<!-- <script src="js/todos.js"></script> -->
+			<script type="module" src="./js/main.js"></script>
 		</div>
 	</body>
 </html>
