--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 					</section>
 				</div>
 			</main>
-			<!-- <script src="js/todos.js"></script> -->
+			<script src="js/todos.js"></script>
 			<script type="module" src="./js/main.js"></script>
 		</div>
 	</body>
