--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<!-- 초기화 -->
-		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="/css/reset.css" />
 		<!-- 공통설정 -->
-		<link rel="stylesheet" href="css/common.css" />
+		<link rel="stylesheet" href="/css/common.css" />
 		<!-- 테마 -->
-		<link rel="stylesheet" href="css/theme.css" />
+		<link rel="stylesheet" href="/css/theme.css" />
 		<!-- 인사말 -->
-		<link rel="stylesheet" href="css/greeting.css" />
+		<link rel="stylesheet" href="/css/greeting.css" />
 		<!-- 통계 대시보드 -->
-		<link rel="stylesheet" href="css/dashBoard.css" />
+		<link rel="stylesheet" href="/css/dashBoard.css" />
 		<!-- 명언/다짐 -->
-		<link rel="stylesheet" href="css/motivation.css" />
+		<link rel="stylesheet" href="/css/motivation.css" />
 		<!-- 검색/필터 -->
-		<link rel="stylesheet" href="css/filter.css" />
+		<link rel="stylesheet" href="/css/filter.css" />
 		<!-- 칸반보드 -->
-		<link rel="stylesheet" href="css/board.css" />
+		<link rel="stylesheet" href="/css/board.css" />
 		<!-- 새할일 모달 -->
-		<link rel="stylesheet" href="css/modal.css" />
+		<link rel="stylesheet" href="/css/modal.css" />
 		<!-- 반응형 (★★ style 맨아래 위치해야함 ★★) -->
-		<link rel="stylesheet" href="css/responsive.css" />
+		<link rel="stylesheet" href="/css/responsive.css" />
 	</head>
 	<body>
 		<main class="container">
@@ -295,8 +295,8 @@
 					</section>
 				</div>
 			</main>
-			<script src="js/todos.js"></script>
-			<script type="module" src="./js/main.js"></script>
+			<script src="/js/todos.js"></script>
+			<script type="module" src="/js/main.js"></script>
 		</div>
 	</body>
 </html>
