--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<!-- 초기화 -->
-		<link rel="stylesheet" href="./css/reset.css" />
+		<link rel="stylesheet" href="./CSS/reset.css" />
 		<!-- 공통설정 -->
-		<link rel="stylesheet" href="./css/common.css" />
+		<link rel="stylesheet" href="./CSS/common.css" />
 		<!-- 테마 -->
-		<link rel="stylesheet" href="./css/theme.css" />
+		<link rel="stylesheet" href="./CSS/theme.css" />
 		<!-- 인사말 -->
-		<link rel="stylesheet" href="./css/greeting.css" />
+		<link rel="stylesheet" href="./CSS/greeting.css" />
 		<!-- 통계 대시보드 -->
-		<link rel="stylesheet" href="./css/dashBoard.css" />
+		<link rel="stylesheet" href="./CSS/dashBoard.css" />
 		<!-- 명언/다짐 -->
-		<link rel="stylesheet" href="./css/motivation.css" />
+		<link rel="stylesheet" href="./CSS/motivation.css" />
 		<!-- 검색/필터 -->
-		<link rel="stylesheet" href="./css/filter.css" />
+		<link rel="stylesheet" href="./CSS/filter.css" />
 		<!-- 칸반보드 -->
-		<link rel="stylesheet" href="./css/board.css" />
+		<link rel="stylesheet" href="./CSS/board.css" />
 		<!-- 새할일 모달 -->
 		<link rel="stylesheet" href="./css/modal.css" />
 		<!-- 반응형 (★★ style 맨아래 위치해야함 ★★) -->
@@ -295,8 +295,8 @@
 					</section>
 				</div>
 			</main>
-			<script src="./js/todos.js"></script>
-			<script type="module" src="./js/main.js"></script>
+			<script src="./JS/todos.js"></script>
+			<script type="module" src="./JS/main.js"></script>
 		</div>
 	</body>
 </html>
