--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 		<!-- 칸반보드 -->
 		<link rel="stylesheet" href="./CSS/board.css" />
 		<!-- 새할일 모달 -->
-		<link rel="stylesheet" href="./css/modal.css" />
+		<link rel="stylesheet" href="./CSS/modal.css" />
 		<!-- 반응형 (★★ style 맨아래 위치해야함 ★★) -->
-		<link rel="stylesheet" href="./css/responsive.css" />
+		<link rel="stylesheet" href="./CSS/responsive.css" />
 	</head>
 	<body>
 		<main class="container">
