--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<!-- 초기화 -->
-		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="./CSS/reset.css" />
 		<!-- 공통설정 -->
-		<link rel="stylesheet" href="css/common.css" />
+		<link rel="stylesheet" href="./CSS/common.css" />
 		<!-- 테마 -->
-		<link rel="stylesheet" href="css/theme.css" />
+		<link rel="stylesheet" href="./CSS/theme.css" />
 		<!-- 인사말 -->
-		<link rel="stylesheet" href="css/greeting.css" />
+		<link rel="stylesheet" href="./CSS/greeting.css" />
 		<!-- 통계 대시보드 -->
-		<link rel="stylesheet" href="css/dashBoard.css" />
+		<link rel="stylesheet" href="./CSS/dashBoard.css" />
 		<!-- 명언/다짐 -->
-		<link rel="stylesheet" href="css/motivation.css" />
+		<link rel="stylesheet" href="./CSS/motivation.css" />
 		<!-- 검색/필터 -->
-		<link rel="stylesheet" href="css/filter.css" />
+		<link rel="stylesheet" href="./CSS/filter.css" />
 		<!-- 칸반보드 -->
-		<link rel="stylesheet" href="css/board.css" />
+		<link rel="stylesheet" href="./CSS/board.css" />
 		<!-- 새할일 모달 -->
-		<link rel="stylesheet" href="css/modal.css" />
+		<link rel="stylesheet" href="./CSS/modal.css" />
 		<!-- 반응형 (★★ style 맨아래 위치해야함 ★★) -->
-		<link rel="stylesheet" href="css/responsive.css" />
+		<link rel="stylesheet" href="./CSS/responsive.css" />
 	</head>
 	<body>
 		<main class="container">
@@ -291,12 +291,13 @@
 								<span>완료</span>
 								<span class="count">0</span>
 							</div>
-						</article>
-					</section>
-				</div>
-			</main>
-			<script src="js/todos.js"></script>
-			<script type="module" src="./js/main.js"></script>
-		</div>
+							<button class="del-all" type="button">전체 삭제</button>
+						</header>
+					</article>
+				</section>
+			</div>
+		</main>
+		<script src="./JS/todos.js" defer></script>
+		<script type="module" src="./JS/main.js"></script>
 	</body>
 </html>
