:wq Enter feat: greeting theme & progress rabbit position fix

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<span id="greetingMessage">좋은 저녁이에요,</span>
 						<span class="nickname-wrap">
 							<strong id="nicknameText" class="nickname-text" tabindex="0"
-								>Task Overflow</strong
+								>FlowDash</strong
 							>
 							<span class="nickname-suffix">님</span>
 							<span class="nickname-icon" aria-hidden="true">✨</span>
@@ -132,7 +132,7 @@
 					>
 						<div class="progressFill" id="progressFill"></div>
 						<div class="progressChar" id="progressChar" aria-hidden="true">
-							🐰
+						    <img src="./img/rabbit.png" alt="" class="progressCharImg" />
 						</div>
 					</div>
 					<div class="progressPct" id="progressPct">0%</div>
@@ -293,13 +293,12 @@
 								<span>완료</span>
 								<span class="count">0</span>
 							</div>
-							<button class="del-all" type="button">전체 삭제</button>
-						</header>
-					</article>
-				</section>
-			</div>
-		</main>
-		<script type="module" src="./JS/todos.js" defer></script>
-		<script type="module" src="./JS/main.js"></script>
+						</article>
+					</section>
+				</div>
+			</main>
+			<script type="module" src="./js/todos.js"></script>
+			<script type="module" src="./js/main.js"></script>
+		</div>
 	</body>
 </html>
