--- a/index.html
+++ b/index.html
@@ -293,12 +293,13 @@
 								<span>완료</span>
 								<span class="count">0</span>
 							</div>
-						</article>
-					</section>
-				</div>
-			</main>
-			<script type="module" src="./js/todos.js"></script>
-			<script type="module" src="./js/main.js"></script>
-		</div>
+							<button class="del-all" type="button">전체 삭제</button>
+						</header>
+					</article>
+				</section>
+			</div>
+		</main>
+		<script type="module" src="./JS/todos.js" defer></script>
+		<script type="module" src="./JS/main.js"></script>
 	</body>
 </html>
