--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 				<select class="sort priority-filter filter">
 					<option value="priority">전체 우선순위</option>
 					<option value="height">높음</option>
-					<option value="middle">보통</option>
+					<option value="middle">중간</option>
 					<option value="low">낮음</option>
 				</select>
 				<select class="sort title-sort filter">
