피드백 반영 UI 및 진행바 수정

--- a/index.html
+++ b/index.html
@@ -92,23 +92,16 @@
 						class="myLineInput"
 						placeholder="오늘의 다짐 한 줄 (예: 10분만 해도 승리)"
 						aria-label="나의 한 줄 입력"
+						autocomplete="new-password" 
 					/>
 
 					<div class="myLineActions">
-						<span
-							class="myLineStatus"
-							id="myLineStatus"
-							aria-live="polite"
-						></span>
 						<button
 							type="button"
 							class="pill-btn pill-btn-primary"
 							id="myLineSaveBtn"
 						>
 							저장
-						</button>
-						<button type="button" class="pill-btn" id="myLineClearBtn">
-							삭제
 						</button>
 					</div>
 				</div>
